# route-74-monitor

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
deploy/systemd/: route74-db-backup.service  route74-db-backup.timer  route74-web.service  route74-yandex-collect.service
docs/: CLI.md  CONTRIBUTING.md  DASHBOARD.md  DECISIONS.md  QUALITY.md  README.md  REPORTING.md  RUNBOOK.md  SECURITY.md  SERVER_DEPLOY.md  YANDEX_CONTRACT.md  research.md
src/route74/: __init__.py  build_info.py  commute_smoke.py  diagnostics.py  env.py  models.py  reporting_smoke_fixtures.py  support_actions.py  support_triage.py  watch_state.py  web_config_smoke.py  web_runtime_smoke.py
src/route74/cli/: __init__.py  bot_latency.py  bot_runtime.py  common.py  commute.py  database.py  forecast_backtest.py  forecast_coverage.py  forecast_formatting.py  forecast_health.py  forecast_readiness.py  formatting.py  main.py  monitor.py  prediction_lab.py  stats.py  support_report.py  support_snapshot.py  version.py  watch_state.py  yandex.py  yandex_canary.py  yandex_collect.py
src/route74/dashboard/: __init__.py  app.py  assets.py  config.py  data.py  preview.py  runtime.py
src/route74/domain/: __init__.py  commute.py  commute_change.py  commute_validation.py  departure_policy.py  departure_safety.py  eta.py  eta_policy.py  prediction_buckets.py  prediction_consensus.py  prediction_selection.py  prediction_sources.py  profile_registry.py  profiles.py  reporting.py  runtime_sources.py  traffic.py  wait_policy.py  walk_buffer.py  watch_policy.py  yandex_history.py
src/route74/notifications/: __init__.py  base.py  config.py  pushover.py
src/route74/presenters/: __init__.py  bot_errors.py  stats.py  (+13 more)
tests/: README.md  conftest.py  test_dashboard_data.py  test_smoke_suite.py
(+188 files in other folders)
